--- a/landmark_visualizer/config.yaml
+++ b/landmark_visualizer/config.yaml
@@ -30,15 +30,15 @@ distance_mark: 42 #LEFT #PID:2 #SID: 3
 camera_matrix: [[1127.783600, 0.000000, 944.349473], [0.000000, 1128.385489, 581.754914], [0.000000, 0.000000, 1.000000]]
 distortion: [0.034238, -0.089798, 0.001695, -0.003938, 0.000000]
 
-camera_position: [0.015397, 1.663271, -1.54408]
-distance_mark: 42 #CENTER #PID:3 #SID: 1
-camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
-distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
-
-camera_position: [0.39405, 1.62238989, -1.54408]
-distance_mark: 42 #RIGHT #PID:1 #SID: 2
-camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
-distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
+#camera_position: [0.015397, 1.663271, -1.54408]
+#distance_mark: 42 #CENTER #PID:3 #SID: 1
+#camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
+#
+#camera_position: [0.39405, 1.62238989, -1.54408]
+#distance_mark: 42 #RIGHT #PID:1 #SID: 2
+#camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
 
 
 
@@ -63,38 +63,38 @@ distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
 
 
 #CORECTAT, ACELASI TVEC CA LA S1 SI TREBUIE ESTIMATA DISTANTA SI RULAT
-file: "/home/andi/Sandbox/AIMAS/Scripts/landmark_visualizer/andia/rvec_logs/24_nov/session_0/"
+#file: "/home/andi/Sandbox/AIMAS/Scripts/landmark_visualizer/andia/rvec_logs/24_nov/session_0/"
 
 #24 NOV SESSION 0
-camera_position: [-0.565, 1.62238989, -1.5382064]  #left-1-0.jpg
-distance_mark:  #LEFT PID:2 SID:3
-camera_matrix: [[1127.783600, 0.000000, 944.349473], [0.000000, 1128.385489, 581.754914], [0.000000, 0.000000, 1.000000]]
-distortion: [0.034238, -0.089798, 0.001695, -0.003938, 0.000000]
-
-camera_position: [] #center-0-0.jpg
-distance_mark:  [0, 1.62238989, -1.5382064]  #CENTER PID:1 SID:2
-camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
-distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
-
-camera_position: [0.565, 1.62238989, -1.5382064] #right-2-0.jpg
-distance_mark: #RIGHT PID:3 SID:1
-camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
-distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
-
-camera_position: [-0.565, 1.62238989, -1.5382064]  #left-1-1.jpg
-distance_mark: #LEFT PID:2 SID:3
-camera_matrix: [[1127.783600, 0.000000, 944.349473], [0.000000, 1128.385489, 581.754914], [0.000000, 0.000000, 1.000000]]
-distortion: [0.034238, -0.089798, 0.001695, -0.003938, 0.000000]
-
-camera_position: [] #center-0-1.jpg
-distance_mark: [0, 1.62238989, -1.5382064] #CENTER PID:1 SID:2
-camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
-distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
-
-camera_position: [0.565, 1.62238989, -1.5382064] #right-2-1.jpg
-distance_mark: #RIGHT PID:3 SID:1
-camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
-distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
+#camera_position: [-0.565, 1.62238989, -1.5382064]  #left-1-0.jpg
+#distance_mark:  #LEFT PID:2 SID:3
+#camera_matrix: [[1127.783600, 0.000000, 944.349473], [0.000000, 1128.385489, 581.754914], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.034238, -0.089798, 0.001695, -0.003938, 0.000000]
+#
+#camera_position: [] #center-0-0.jpg
+#distance_mark:  [0, 1.62238989, -1.5382064]  #CENTER PID:1 SID:2
+#camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
+#
+#camera_position: [0.565, 1.62238989, -1.5382064] #right-2-0.jpg
+#distance_mark: #RIGHT PID:3 SID:1
+#camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
+#
+#camera_position: [-0.565, 1.62238989, -1.5382064]  #left-1-1.jpg
+#distance_mark: #LEFT PID:2 SID:3
+#camera_matrix: [[1127.783600, 0.000000, 944.349473], [0.000000, 1128.385489, 581.754914], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.034238, -0.089798, 0.001695, -0.003938, 0.000000]
+#
+#camera_position: [] #center-0-1.jpg
+#distance_mark: [0, 1.62238989, -1.5382064] #CENTER PID:1 SID:2
+#camera_matrix: [[1122.873891, 0.000000, 954.962391], [0.000000, 1123.453009, 561.582887], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.049052, -0.114197, -0.000437, 0.002550, 0.000000]
+#
+#camera_position: [0.565, 1.62238989, -1.5382064] #right-2-1.jpg
+#distance_mark: #RIGHT PID:3 SID:1
+#camera_matrix: [[1142.907254, 0.000000, 961.236468], [0.000000, 1144.039896, 538.616673], [0.000000, 0.000000, 1.000000]]
+#distortion: [0.036627, -0.100169, -0.000988, -0.001462, 0.000000]
 
 
 
